--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fun Game</title>
+    <title>당근 찾기 게임</title>
     <script
       src="https://kit.fontawesome.com/9eb162ac0d.js"
       crossorigin="anonymous"
@@ -17,9 +17,7 @@
         <button class="game__button">
           <i class="fas fa-play"></i>
         </button>
-        <span class="game__timer">
-          00:00
-        </span>
+        <span class="game__timer"> 00:00 </span>
         <span class="game__score">0</span>
       </header>
       <section class="game__field"></section>
